MT/lab4/src/gen/MetaGrammarParser.java
// Generated from MetaGrammar.g4 by ANTLR 4.7.2
package gen;

import grammar.Grammar;
import atom.Atom;
import java.util.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MetaGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		GRAMMAR=1, RETURN=2, HEADER=3, MEMBERS=4, IMPORT=5, SKIP_RULE=6, SOBAKA=7, 
		SEMI=8, COLON=9, COMMA=10, REPEAT=11, OR=12, QUESTION=13, ASTERISK=14, 
		PLUS=15, EQ=16, L_PAR=17, R_PAR=18, L_BRACE=19, R_BRACE=20, L_BRACKET=21, 
		R_BRACKET=22, NUMBER=23, NONTERMINAL_NAME=24, TOKEN_NAME=25, LETTER=26, 
		NAME=27, CODE=28, REGEX=29, WS=30;
	public static final int
		RULE_metaGrammar = 0, RULE_grammarName = 1, RULE_parsRules = 2, RULE_parsRule = 3, 
		RULE_args = 4, RULE_arg = 5, RULE_atomExpr = 6, RULE_atoms = 7, RULE_atom = 8, 
		RULE_nonterminal = 9, RULE_params = 10, RULE_param = 11, RULE_token = 12, 
		RULE_lexerRules = 13, RULE_lexerRule = 14, RULE_tokenFilling = 15, RULE_name = 16;
	private static String[] makeRuleNames() {
		return new String[] {
			"metaGrammar", "grammarName", "parsRules", "parsRule", "args", "arg", 
			"atomExpr", "atoms", "atom", "nonterminal", "params", "param", "token", 
			"lexerRules", "lexerRule", "tokenFilling", "name"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'grammar'", "'returns'", "'header'", "'members'", "'import'", 
			"'-> skip'", "'@'", "';'", "':'", "','", null, "'|'", "'?'", "'*'", "'+'", 
			"'='", "'('", "')'", "'{'", "'}'", "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "GRAMMAR", "RETURN", "HEADER", "MEMBERS", "IMPORT", "SKIP_RULE", 
			"SOBAKA", "SEMI", "COLON", "COMMA", "REPEAT", "OR", "QUESTION", "ASTERISK", 
			"PLUS", "EQ", "L_PAR", "R_PAR", "L_BRACE", "R_BRACE", "L_BRACKET", "R_BRACKET", 
			"NUMBER", "NONTERMINAL_NAME", "TOKEN_NAME", "LETTER", "NAME", "CODE", 
			"REGEX", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MetaGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MetaGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class MetaGrammarContext extends ParserRuleContext {
		public Grammar grammar;
		public GrammarNameContext grammarName;
		public ParsRulesContext parsRules;
		public LexerRulesContext lexerRules;
		public GrammarNameContext grammarName() {
			return getRuleContext(GrammarNameContext.class,0);
		}
		public ParsRulesContext parsRules() {
			return getRuleContext(ParsRulesContext.class,0);
		}
		public LexerRulesContext lexerRules() {
			return getRuleContext(LexerRulesContext.class,0);
		}
		public MetaGrammarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_metaGrammar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).enterMetaGrammar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).exitMetaGrammar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetaGrammarVisitor ) return ((MetaGrammarVisitor<? extends T>)visitor).visitMetaGrammar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MetaGrammarContext metaGrammar() throws RecognitionException {
		MetaGrammarContext _localctx = new MetaGrammarContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_metaGrammar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			((MetaGrammarContext)_localctx).grammarName = grammarName();
			setState(35);
			((MetaGrammarContext)_localctx).parsRules = parsRules();
			setState(36);
			((MetaGrammarContext)_localctx).lexerRules = lexerRules();
			((MetaGrammarContext)_localctx).grammar =  new Grammar(((MetaGrammarContext)_localctx).grammarName.value, ((MetaGrammarContext)_localctx).lexerRules.lexRules, ((MetaGrammarContext)_localctx).parsRules.rules);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GrammarNameContext extends ParserRuleContext {
		public String value;
		public NameContext name;
		public TerminalNode GRAMMAR() { return getToken(MetaGrammarParser.GRAMMAR, 0); }
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(MetaGrammarParser.SEMI, 0); }
		public GrammarNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grammarName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).enterGrammarName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).exitGrammarName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetaGrammarVisitor ) return ((MetaGrammarVisitor<? extends T>)visitor).visitGrammarName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GrammarNameContext grammarName() throws RecognitionException {
		GrammarNameContext _localctx = new GrammarNameContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_grammarName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			match(GRAMMAR);
			setState(40);
			((GrammarNameContext)_localctx).name = name();
			setState(41);
			match(SEMI);
			((GrammarNameContext)_localctx).value =  ((GrammarNameContext)_localctx).name.value;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParsRulesContext extends ParserRuleContext {
		public List<Grammar.Rule> rules;
		public ParsRuleContext parsRule;
		public List<ParsRuleContext> parsRule() {
			return getRuleContexts(ParsRuleContext.class);
		}
		public ParsRuleContext parsRule(int i) {
			return getRuleContext(ParsRuleContext.class,i);
		}
		public ParsRulesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parsRules; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).enterParsRules(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).exitParsRules(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetaGrammarVisitor ) return ((MetaGrammarVisitor<? extends T>)visitor).visitParsRules(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParsRulesContext parsRules() throws RecognitionException {
		ParsRulesContext _localctx = new ParsRulesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_parsRules);

		    ((ParsRulesContext)_localctx).rules =  new LinkedList<>();

		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(44);
				((ParsRulesContext)_localctx).parsRule = parsRule();
				_localctx.rules.addAll(((ParsRulesContext)_localctx).parsRule.rule);
				}
				}
				setState(49); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NONTERMINAL_NAME );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParsRuleContext extends ParserRuleContext {
		public List<Grammar.Rule> rule;
		public Token NONTERMINAL_NAME;
		public ArgsContext args;
		public ArgContext arg;
		public AtomExprContext atomExpr;
		public TerminalNode NONTERMINAL_NAME() { return getToken(MetaGrammarParser.NONTERMINAL_NAME, 0); }
		public TerminalNode L_PAR() { return getToken(MetaGrammarParser.L_PAR, 0); }
		public ArgsContext args() {
			return getRuleContext(ArgsContext.class,0);
		}
		public TerminalNode R_PAR() { return getToken(MetaGrammarParser.R_PAR, 0); }
		public TerminalNode RETURN() { return getToken(MetaGrammarParser.RETURN, 0); }
		public TerminalNode L_BRACKET() { return getToken(MetaGrammarParser.L_BRACKET, 0); }
		public ArgContext arg() {
			return getRuleContext(ArgContext.class,0);
		}
		public TerminalNode R_BRACKET() { return getToken(MetaGrammarParser.R_BRACKET, 0); }
		public TerminalNode COLON() { return getToken(MetaGrammarParser.COLON, 0); }
		public AtomExprContext atomExpr() {
			return getRuleContext(AtomExprContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(MetaGrammarParser.SEMI, 0); }
		public ParsRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parsRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).enterParsRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).exitParsRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetaGrammarVisitor ) return ((MetaGrammarVisitor<? extends T>)visitor).visitParsRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParsRuleContext parsRule() throws RecognitionException {
		ParsRuleContext _localctx = new ParsRuleContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_parsRule);

		    ((ParsRuleContext)_localctx).rule =  new LinkedList<>();

		try {
			setState(74);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(51);
				((ParsRuleContext)_localctx).NONTERMINAL_NAME = match(NONTERMINAL_NAME);
				setState(52);
				match(L_PAR);
				setState(53);
				((ParsRuleContext)_localctx).args = args();
				setState(54);
				match(R_PAR);
				setState(55);
				match(RETURN);
				setState(56);
				match(L_BRACKET);
				setState(57);
				((ParsRuleContext)_localctx).arg = arg();
				setState(58);
				match(R_BRACKET);
				setState(59);
				match(COLON);
				setState(60);
				((ParsRuleContext)_localctx).atomExpr = atomExpr();
				setState(61);
				match(SEMI);

				      for (List<Atom> l : ((ParsRuleContext)_localctx).atomExpr.allAtoms) {
				          _localctx.rule.add(new Grammar.Rule((((ParsRuleContext)_localctx).NONTERMINAL_NAME!=null?((ParsRuleContext)_localctx).NONTERMINAL_NAME.getText():null), ((ParsRuleContext)_localctx).args.vars, ((ParsRuleContext)_localctx).arg.var, l));
				      }
				  
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(64);
				((ParsRuleContext)_localctx).NONTERMINAL_NAME = match(NONTERMINAL_NAME);
				setState(65);
				match(RETURN);
				setState(66);
				match(L_BRACKET);
				setState(67);
				((ParsRuleContext)_localctx).arg = arg();
				setState(68);
				match(R_BRACKET);
				setState(69);
				match(COLON);
				setState(70);
				((ParsRuleContext)_localctx).atomExpr = atomExpr();
				setState(71);
				match(SEMI);

				    for (List<Atom> l : ((ParsRuleContext)_localctx).atomExpr.allAtoms) {
				        _localctx.rule.add(new Grammar.Rule((((ParsRuleContext)_localctx).NONTERMINAL_NAME!=null?((ParsRuleContext)_localctx).NONTERMINAL_NAME.getText():null), Collections.EMPTY_LIST, ((ParsRuleContext)_localctx).arg.var, l));
				    }

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgsContext extends ParserRuleContext {
		public List<Grammar.Rule.Variable> vars;
		public ArgContext arg;
		public List<ArgContext> arg() {
			return getRuleContexts(ArgContext.class);
		}
		public ArgContext arg(int i) {
			return getRuleContext(ArgContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(MetaGrammarParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MetaGrammarParser.COMMA, i);
		}
		public ArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_args; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).enterArgs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).exitArgs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetaGrammarVisitor ) return ((MetaGrammarVisitor<? extends T>)visitor).visitArgs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgsContext args() throws RecognitionException {
		ArgsContext _localctx = new ArgsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_args);

		    ((ArgsContext)_localctx).vars =  new LinkedList<>();

		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			((ArgsContext)_localctx).arg = arg();
			_localctx.vars.add(((ArgsContext)_localctx).arg.var);
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(78);
				match(COMMA);
				setState(79);
				((ArgsContext)_localctx).arg = arg();
				_localctx.vars.add(((ArgsContext)_localctx).arg.var);
				}
				}
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgContext extends ParserRuleContext {
		public Grammar.Rule.Variable var;
		public NameContext t;
		public NameContext n;
		public List<NameContext> name() {
			return getRuleContexts(NameContext.class);
		}
		public NameContext name(int i) {
			return getRuleContext(NameContext.class,i);
		}
		public ArgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).enterArg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).exitArg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetaGrammarVisitor ) return ((MetaGrammarVisitor<? extends T>)visitor).visitArg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgContext arg() throws RecognitionException {
		ArgContext _localctx = new ArgContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_arg);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			((ArgContext)_localctx).t = name();
			setState(88);
			((ArgContext)_localctx).n = name();
			((ArgContext)_localctx).var =  new Grammar.Rule.Variable(((ArgContext)_localctx).t.value, ((ArgContext)_localctx).n.value);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtomExprContext extends ParserRuleContext {
		public List<List<Atom>> allAtoms;
		public AtomsContext atoms;
		public List<AtomsContext> atoms() {
			return getRuleContexts(AtomsContext.class);
		}
		public AtomsContext atoms(int i) {
			return getRuleContext(AtomsContext.class,i);
		}
		public List<TerminalNode> OR() { return getTokens(MetaGrammarParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(MetaGrammarParser.OR, i);
		}
		public AtomExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atomExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).enterAtomExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).exitAtomExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetaGrammarVisitor ) return ((MetaGrammarVisitor<? extends T>)visitor).visitAtomExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AtomExprContext atomExpr() throws RecognitionException {
		AtomExprContext _localctx = new AtomExprContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_atomExpr);

		    ((AtomExprContext)_localctx).allAtoms =  new LinkedList<>();

		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			((AtomExprContext)_localctx).atoms = atoms();
			_localctx.allAtoms.add(((AtomExprContext)_localctx).atoms.atomsList);
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==OR) {
				{
				{
				setState(93);
				match(OR);
				setState(94);
				((AtomExprContext)_localctx).atoms = atoms();
				_localctx.allAtoms.add(((AtomExprContext)_localctx).atoms.atomsList);
				}
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtomsContext extends ParserRuleContext {
		public List<Atom> atomsList;
		public AtomContext atom;
		public List<AtomContext> atom() {
			return getRuleContexts(AtomContext.class);
		}
		public AtomContext atom(int i) {
			return getRuleContext(AtomContext.class,i);
		}
		public AtomsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atoms; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).enterAtoms(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).exitAtoms(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetaGrammarVisitor ) return ((MetaGrammarVisitor<? extends T>)visitor).visitAtoms(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AtomsContext atoms() throws RecognitionException {
		AtomsContext _localctx = new AtomsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_atoms);

		    ((AtomsContext)_localctx).atomsList =  new LinkedList<>();

		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(102);
				((AtomsContext)_localctx).atom = atom();
				_localctx.atomsList.add(((AtomsContext)_localctx).atom.atoM);
				}
				}
				setState(107); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NONTERMINAL_NAME) | (1L << TOKEN_NAME) | (1L << NAME))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtomContext extends ParserRuleContext {
		public Atom atoM;
		public NonterminalContext nonterminal;
		public TokenContext token;
		public NonterminalContext nonterminal() {
			return getRuleContext(NonterminalContext.class,0);
		}
		public TokenContext token() {
			return getRuleContext(TokenContext.class,0);
		}
		public AtomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atom; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).enterAtom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).exitAtom(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetaGrammarVisitor ) return ((MetaGrammarVisitor<? extends T>)visitor).visitAtom(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AtomContext atom() throws RecognitionException {
		AtomContext _localctx = new AtomContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_atom);
		try {
			setState(115);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(109);
				((AtomContext)_localctx).nonterminal = nonterminal();
				((AtomContext)_localctx).atoM =  ((AtomContext)_localctx).nonterminal.atoM;
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(112);
				((AtomContext)_localctx).token = token();
				((AtomContext)_localctx).atoM =  ((AtomContext)_localctx).token.atoM;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NonterminalContext extends ParserRuleContext {
		public Atom atoM;
		public NameContext name;
		public Token NONTERMINAL_NAME;
		public ParamsContext params;
		public Token CODE;
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public TerminalNode EQ() { return getToken(MetaGrammarParser.EQ, 0); }
		public TerminalNode NONTERMINAL_NAME() { return getToken(MetaGrammarParser.NONTERMINAL_NAME, 0); }
		public TerminalNode L_PAR() { return getToken(MetaGrammarParser.L_PAR, 0); }
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public TerminalNode R_PAR() { return getToken(MetaGrammarParser.R_PAR, 0); }
		public TerminalNode CODE() { return getToken(MetaGrammarParser.CODE, 0); }
		public NonterminalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nonterminal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).enterNonterminal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGrammarListener ) ((MetaGrammarListener)listener).exitNonterminal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetaGrammarVisitor ) return ((MetaGrammarVisitor<? extends T>)visitor).visitNonterminal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NonterminalContext nonterminal() throws RecognitionException {
		NonterminalContext _localctx = new NonterminalContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_nonterminal);
		int _la;
		try {
			setState(140);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(117);
				((NonterminalContext)_localctx).name = name();
				setState(118);
				match(EQ);
				setState(119);
				((NonterminalContext)_localctx).NONTERMINAL_NAME = match(NONTERMINAL_NAME);
				setState(120);
				match(L_PAR);
				setState(121);
				((NonterminalContext)_localctx).params = params();
				setState(122);
				match(R_PAR);
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CODE) {
					{
					setState(123);
					((NonterminalContext)_localctx).CODE = match(CODE);
					}
				}
